<resources>
    <string name="app_name">Four Elements</string>
    <string name="textCzteryŻywioły">CZTERY ŻYWIOŁY</string>
    <string name="textGra">GRA:</string>
    <string name="ImageSpace">TODO</string>
    <string name="textTwojąPostać">Twoją postać symbolizuje żywioł. Jeżeli grasz pierwszy raz wybierz ten, który najlepiej odpowiada Twojej naturze.</string>
    <string name="buttonWater">TODO</string>
    <string name="pageoneimage">TODO</string>
    <string name="textjestes_piratem">JESTEŚ PIRATEM</string>
    <string name="textpladrujesz_">Plądrujesz, pijesz i wyruszasz w nieznane aby przeżyć kolejne dni. Nie jesteś bogaty, ani biedny. Ubrania masz splamione krwią, chodzisz wiecznie pijany w sztok, nosisz opaskę na lewym oku i śmierdzisz jak beczka zdechłych flądr. Masz szacunek u kamratów i wierzą, że mógłbyś zostać nowym kapitanem. Jednym słowem, wymiatasz!</string>
    <string name="button_porywasz">Porywasz królewnę</string>
    <string name="textco_dalej">Co dalej?</string>
    <string name="textnic_nie_zmieniasz">Nic nie zmieniasz</string>
    <string name="textidziesz_do_aa">Idziesz do AA</string>
    <string name="titlenic_nie_zmieniasz">NIC NIE ZMIENIASZ</string>
    <string name="text2pladrujesz">Plądrujesz, pijesz i wyruszasz w nieznane aby przeżyć kolejne dni. Nie jesteś bogaty, ani biedny. Ubrania masz splamione krwią, chodzisz wiecznie pijany w sztok, nosisz opaskę na lewym oku i śmierdzisz jak beczka zdechłych flądr. Masz szacunek u kamratów i wierzą, że mógłbyś zostać nowym kapitanem. Jednym słowem, wymiatasz!</string>
    <string name="textpewnego_dnia">Pewnego dnia, przy jednej z biesiad, jedząc jeszcze niezepsute żarcie i chlejąc mocny niczym śpiew syren rum, ze stołu spada jabłko.</string>
    <string name="textpodnosisz">Podnosisz</string>
    <string name="textignorujesz">Ignorujesz</string>
    <string name="textco_robisz">Co robisz?</string>
    <string name="appleimage">TODO</string>
    <string name="button48zagraj_jeszcze_raz">Zagraj jeszcze raz</string>
    <string name="text48koniec_gry">KONIEC GRY</string>
    <string name="text48po_dlugim">Po długim przypatrywaniu się jabłku w końcu go podnosisz. Z chwilą powrotu na krzesło dochodzisz do odkrycia prawa ciężkości! Mimo, że nie znasz wzorów fizyki opowiadasz kamratom o całej sytuacji. Nikt nie rozumie, ale tym lepiej dla Ciebie. Zostajesz uznany za najmądrzejszego pirata w historii i mianują Cię swoim kapitanem i mędrcem. Twoja postać na zawsze zostaje zachowana w pamięci pirackich legend.</string>
    <string name="textview_android_id48"><![CDATA[<TextView android:id=]]></string>
    <string name="text48ignorujesz_jab_ko">IGNORUJESZ JABŁKO</string>
    <string name="string48zagraj_jeszcze_raz">Zagraj jeszcze raz</string>
    <string name="text48koniec_gryx">KONIEC GRY</string>
    <string name="text48zignorowane">Zignorowane jabłko pozostało nienaruszone. Nikt inny nie zwrócił na nie uwagi i już nigdy nie zostało podniesione. Przez dnie leżało w jednej pozycji samotne i nietknięte.</string>
    <string name="text48pewnego_dnia">Pewnego dnia rozpętał się ogromny sztorm i jabłko wypadło za burtę. Z powodu zniszczeń statek zatonął, wraz z nim Ty i wszystko co na nim było. Natomiast jabłko popychane siłą fal znalazło się na bezludnej wyspie. Z czasem zaczęło się rozkładać i łączyć z ziemią na której leżało. Nasiona weszły w glebę i wyrosła z nich jabłoń. Drzewo zrozumiało to czym jest i pomyślało “Kurwa, jestem zajebisty”.</string>
    <string name="text48podnosisz">PODNOSISZ</string>
    <string name="buttonzapisujesz">zapisujesz się na spotkania Anonimowych Alkocholików</string>
    <string name="imagePirate">TODO</string>
</resources>
